--- a/mtgen/Views/Home/Index.cshtml
+++ b/mtgen/Views/Home/Index.cshtml
@@ -101,7 +101,7 @@
     <p>I enjoy building and enhancing this thing, so I'll try to keep doing it for every new set.</p>
     <p>Technically these Prereleases use a format called <a href="http://www.wizards.com/Magic/Magazine/Article.aspx?x=mtgcom/daily/sw63">Sealed Deck</a>, where you get 6 packs of sealed boosters, open them, and construct your deck from only those cards.</p>
     <p class="twitter-follow">
-        Want the latest updates? <a href="https://twitter.com/mtggen" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @@mtggen</a>
+        Want the latest updates? <a href="https://twitter.com/mtggen" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @@mtggen</a> or <a href="http://eepurl.com/bbdyO5">subscribe to the email update list</a>.
         <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
     </p>
     <p>12-Nov-2014: This project has now been <a href="https://github.com/copperdogma/mtgen">open sourced on Github</a>. I will continue creating new generators as new sets come out, but if you have something you wish to contribute I'd love to hear from you. Enjoy!</p>
