--- a/mtgen/Views/Set/frf.cshtml
+++ b/mtgen/Views/Set/frf.cshtml
@@ -6,59 +6,49 @@
         Name = "Fate Reforged",
         CreatedDate = new DateTime(2015, 1, 4),
         CardCount = 185,
-        StartProductName = "frf-all-cards",
+        StartProductName = "frf-prerelease",
 
         CardFiles = new List<string>() { "cardsMain.json", "cardsToken.json", "cardsOther.json" },
-        PackFiles = new List<string>() { "packs.json" }
+        PackFiles = new List<string>() { "../ktk/packs.json", "packs.json" }
     };
 
     set.CardFiles = set.CardFiles.Concat(new List<string>() { "../ktk/cardsMain.json", "../ktk/cardsToken.json", "../ktk/cardsOther.json" }).ToList();
-    set.PackFiles.Add("../ktk/packs.json");
 
     set.Updates = new List<Update>()
     {
         new Update() {
+            UpdateDate = new DateTime(2015,1,21),
+            HtmlString = "Evening: Added proper Prerelease Info Cards for each clan."
+        },
+        new Update() {
+            UpdateDate = new DateTime(2015,1,19),
+            HtmlString = "Evening: Ugin's Fate boosters are now correct, as per <a target='_blank' href='http://magic.wizards.com/en/articles/archive/arcana/ugins-fate-booster-contents-2015-01-19'>WotC's article</a>. Also the seeded boosters should be 100%, as per <a target='_blank' href='https://docs.google.com/spreadsheet/ccc?key=0Apln2HM4aSGbdDJ6MFk5cTBjb09sXzFWdndhTkx2V1E#gid=10'>brinelol's spreadsheet</a>."
+        },
+        new Update() {
+            UpdateDate = new DateTime(2015,1,16),
+            HtmlString = "Evening: Prerelease seeded boosters are now far more accurate."
+        },
+        new Update() {
+            UpdateDate = new DateTime(2015,1,14),
+            HtmlString = "Evening: Oops! Added in Dragon Bell Monk and Reach of Shadows. I missed them. Thanks, Michael!"
+        },
+        new Update() {
+            UpdateDate = new DateTime(2015,1,12),
+            HtmlString = "Evening: Updated Ugin's Booster contents and the Ugin Achievement Card."
+        },
+        new Update() {
+            UpdateDate = new DateTime(2015,1,10),
+            HtmlString = "Evening: FRF Seeded Booster now has proper FRF Dual Lands/KTK Fetch Lands in land slot."
+        },
+        new Update() {
+            UpdateDate = new DateTime(2015,1,9),
+            HtmlString = "Evening: Added Prerelease option. The Seeded Booster is a guess; the first slot is a Mythic or Rare from that clan, the second is a Runemark (my guess). And the Ugin's Fate Booster's first two cards are just random cards for now until we get more details."
+        },
+        new Update() {
             UpdateDate = new DateTime(2015,1,5),
             HtmlString = "Evening: Added Booster option."
-        }
+        },
     };
-    //    new Update() {
-    //        UpdateDate = new DateTime(2014,9,30),
-    //        HtmlString = "Evening: Added actual spindown life counters and the Abzan Clan Info card."
-    //    },
-    //    new Update() {
-    //        UpdateDate = new DateTime(2014,9,22),
-    //        HtmlString = "Evening: Added most of the actual Clan pack-ins and the Fat Pack pack-ins."
-    //    },
-    //    new Update() {
-    //        UpdateDate = new DateTime(2014,9,18),
-    //        HtmlString = "Evening: Updated seeded clan packs with what we're seeing in the <a href='https://docs.google.com/spreadsheet/ccc?key=0Apln2HM4aSGbdDJ6MFk5cTBjb09sXzFWdndhTkx2V1E#gid=9'>tracking spreadsheet</a>. Thanks, Wolfninja for the heads up!"
-    //    },
-    //    new Update() {
-    //        UpdateDate = new DateTime(2014,9,15),
-    //        HtmlString = "Noon: Added updated prerelease pack-ins from <a href='http://magic.wizards.com/en/articles/archive/feature/khans-tarkir-prerelease-primer-2014-09-15'>here</a>."
-    //    },
-    //    new Update() {
-    //        UpdateDate = new DateTime(2014,9,14),
-    //        HtmlString = "Midnight: Added Fat Pack pack-in placeholders and Holiday Gift Box product."
-    //    },
-    //    new Update() {
-    //        UpdateDate = new DateTime(2014,9,14),
-    //        HtmlString = "Evening: Added prerelease pack-in placeholders."
-    //    },
-    //    new Update() {
-    //        UpdateDate = new DateTime(2014,9,14),
-    //        HtmlString = "Afternoon: Seeded booster first slot possibilities now made up of the clan's Khan and all clan rares."
-    //    },
-    //    new Update() {
-    //        UpdateDate = new DateTime(2014,9,14),
-    //        HtmlString = "Morning: Prerelease generator created."
-    //    },
-    //    new Update() {
-    //        UpdateDate = new DateTime(2014,9,14),
-    //        HtmlString = "All cards now included."
-    //    }
-    //};
 
     ViewBag.Set = set;
 
