--- a/mtgen/Views/Shared/_Layout.cshtml
+++ b/mtgen/Views/Shared/_Layout.cshtml
@@ -63,6 +63,7 @@
         <div class="symbol">
             <img itemprop="image" src="@SetContent(set,"images/symbol.png")" alt="symbol" />
             <a href="@Url.Action("Index","Home")" class="button"><span>Back to </span>Home</a>
+            <a href="http://eepurl.com/bbdyO5" class="button small" title="Subscribe to Updates">Subscribe</a>
             <a href="https://twitter.com/mtggen" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @@mtggen</a>
             <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
             <a href="https://twitter.com/share" class="twitter-share-button" data-via="mtggen" data-hashtags="mtg">Tweet</a>
