Finished FRF content.

--- a/mtgen/Views/Set/frf.cshtml
+++ b/mtgen/Views/Set/frf.cshtml
@@ -17,6 +17,10 @@
     set.Updates = new List<Update>()
     {
         new Update() {
+            UpdateDate = new DateTime(2015,1,30),
+            HtmlString = "Evening: Added Fat Pack product."
+        },
+        new Update() {
             UpdateDate = new DateTime(2015,1,21),
             HtmlString = "Evening: Added proper Prerelease Info Cards for each clan."
         },
