Added Gatherer import, and created Onslaught, Masques, and Urza blocks (9 sets total).

--- a/mtgen/Views/Home/Index.cshtml
+++ b/mtgen/Views/Home/Index.cshtml
@@ -161,6 +161,24 @@
             @DisplaySet("dka")
             @DisplaySet("isd")
         </tbody>
+        <tbody class="block">
+            <tr class="title"><td colspan="5">Onslaught Block</td></tr>
+            @DisplaySet("ons")
+            @DisplaySet("lgn")
+            @DisplaySet("scg")
+        </tbody>
+        <tbody class="block">
+            <tr class="title"><td colspan="5">Masques Block</td></tr>
+            @DisplaySet("mmq")
+            @DisplaySet("nms")
+            @DisplaySet("pcy")
+        </tbody>
+        <tbody class="block">
+            <tr class="title"><td colspan="5">Urza Block</td></tr>
+            @DisplaySet("usg")
+            @DisplaySet("ulg")
+            @DisplaySet("uds")
+        </tbody>
     </table>
     <p>Where are the previous sets? I started the generator on Innistrad, so older ones don't exist. I may add them one day. If you have a particular set you really want to see, <a href="mailto:cam.marsollier@gmail.com">let me know</a>.</p>
     <footer>
