--- a/mtgen/Views/Set/999.cshtml
+++ b/mtgen/Views/Set/999.cshtml
@@ -5,6 +5,7 @@
         Code = "m15",
         Name = "TEST Set",
         CreatedDate = new DateTime(2099, 12, 31),
+        CreatedText = "Appears at the top.",
         CardCount = 269,
         StartProductName = "m15-prerelease"
     };
