--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -121,6 +121,12 @@
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "nph" })
         </tbody>
         <tbody class="block">
+            <tr class="title"><td colspan="5">Zendikar </td></tr>
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "zen" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "wwk" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "roe" })
+        </tbody>
+        <tbody class="block">
             <tr class="title"><td colspan="5">Onslaught Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "ons" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "lgn" })
