- tweaked mtg-generator.js to .toString() the query field value before .toLowerCase()ing it in case it's a number - added first three sets ever: Alpha, Beta, and Unlimited (lea, leb, 2ed)

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -150,6 +150,9 @@
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "ulg" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "uds" })
         </tbody>
+        @Component.Invoke("SetSummary", new SetStubSummary { Code = "2ed" })
+        @Component.Invoke("SetSummary", new SetStubSummary { Code = "leb" })
+        @Component.Invoke("SetSummary", new SetStubSummary { Code = "lea" })
     </table>
     <p>Where are the previous sets? I started the generator on Innistrad, so older ones don't exist. I may add them one day. If you have a particular set you really want to see, <a href="mailto:cam.marsollier@gmail.com">let me know</a>.</p>
     <footer>
