--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -150,6 +150,8 @@
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "ulg" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "uds" })
         </tbody>
+        @Component.Invoke("SetSummary", new SetStubSummary { Code = "atq" })
+        @Component.Invoke("SetSummary", new SetStubSummary { Code = "arn" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "2ed" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "leb" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "lea" })
