Added The Dark (drk) set.

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -150,6 +150,7 @@
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "ulg" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "uds" })
         </tbody>
+        @Component.Invoke("SetSummary", new SetStubSummary { Code = "drk" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "leg" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "atq" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "arn" })
