--- a/src/mtgen/Views/Set/fem.cshtml
+++ b/src/mtgen/Views/Set/fem.cshtml
@@ -2,18 +2,18 @@
 @{
     var set = new mtgen.ViewModels.Set()
     {
-        Code = "atq",
-        Name = "Antiquities",
-        CreatedDate = new DateTime(2015, 12, 24),
-        CardCount = 100,
-        StartProductName = "atq-boosters"
+        Code = "fem",
+        Name = "Fallen Empires",
+        CreatedDate = new DateTime(2015, 12, 25),
+        CardCount = 187,
+        StartProductName = "rem-boosters"
     };
 
     set.Updates = new List<Update>()
     {
         new Update() {
-            UpdateDate = new DateTime(2015,12,24),
-            HtmlString = "Note: Officialy an 85 card set, collectors consider it 100 due to <a href='http://mtgsalvation.gamepedia.com/Antiquities#Set_details'>alternate card art</a>."
+            UpdateDate = new DateTime(2015,12,25),
+            HtmlString = "Note: Officialy a 102 card set, collectors consider it 187 due to <a href='http://mtgsalvation.gamepedia.com/Fallen_Empires#Set_details'>alternate card art</a>."
         }
     };
 
