--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -150,6 +150,7 @@
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "ulg" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "uds" })
         </tbody>
+        @Component.Invoke("SetSummary", new SetStubSummary { Code = "ugl" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "hml" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "fem" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "drk" })
