--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -126,6 +126,7 @@
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "wwk" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "roe" })
         </tbody>
+        @Component.Invoke("SetSummary", new SetStubSummary { Code = "unh" })
         <tbody class="block">
             <tr class="title"><td colspan="5">Onslaught Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "ons" })
