--- a/src/mtgen/Views/Set/bfz.cshtml
+++ b/src/mtgen/Views/Set/bfz.cshtml
@@ -39,7 +39,8 @@
 
     //set.Incomplete = true;
 
-    set.CardFiles = new List<string>() { "cardsMain.json", "cardsToken.json", "cardsOther.json" };
+    set.CardFiles = new List<string>() { "cardsMain.json", "cardsToken.json", "cardsOther.json",
+        "../exp/cardsMain.json" };
     set.PackFiles = new List<string>() { "packs.json" };
 
     ViewBag.Set = set;
