OGW set created -- just missing tokens

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -47,8 +47,8 @@
         </tbody>
         <tbody class="block">
             <tr class="title"><td colspan="5">Battle for Zendikar Block</td></tr>
-            @Component.Invoke("SetSummary", new SetStubSummary { Code = "ogw", IsFutureSet = true })
-            @Component.Invoke("SetSummary", new SetStubSummary { Code = "bfz", IsCurrentSet = true })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "ogw", IsCurrentSet = true })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "bfz", IsCurrentSet = false })
         </tbody>
         <tbody>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "v15", IsCurrentSet = true })
