- fixed some bad data, set the startup set to prerelease, and upped the chance of Wastes

--- a/src/mtgen/Views/Set/ogw.cshtml
+++ b/src/mtgen/Views/Set/ogw.cshtml
@@ -6,7 +6,7 @@
         Name = "Oath of the Gatewatch",
         CreatedDate = new DateTime(2016, 1, 9),
         CardCount = 184,
-        StartProductName = "ogw-all-cards"
+        StartProductName = "ogw-prerelease"
     };
 
     set.Updates = new List<Update>()
