--- a/src/mtgen/Views/Set/ogw.cshtml
+++ b/src/mtgen/Views/Set/ogw.cshtml
@@ -11,10 +11,10 @@
 
     set.Updates = new List<Update>()
     {
-        //new Update() {
-        //    UpdateDate = new DateTime(2015,10,9),
-        //    HtmlString = "Morning: Added prerelease pack-ins."
-        //}
+        new Update() {
+            UpdateDate = new DateTime(2016,1,11),
+            HtmlString = "Evening: Lowered Expedition chance and added tokens."
+        }
     };
 
     //set.Incomplete = true;
