--- a/src/mtgen/Views/Set/ogw.cshtml
+++ b/src/mtgen/Views/Set/ogw.cshtml
@@ -20,7 +20,7 @@
     //set.Incomplete = true;
 
     set.CardFiles = new List<string>() { "cardsMain.json", "cardsToken.json", "cardsOther.json",
-        "../exp/cardsMain.json", "../bfz/cardsMain.json", "../bfz/cardsOther.json" };
+        "../exp/cardsMain.json", "../bfz/cardsMain.json", "../bfz/cardsOther.json", "../bfz/cardsToken.json" };
     set.PackFiles = new List<string>() { "packs.json", "../bfz/packs.json" };
 
     ViewBag.Set = set;
