- added 3ed (Revised), 4ed, and ice

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -153,9 +153,12 @@
         </tbody>
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "ugl" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "hml" })
+        @Component.Invoke("SetSummary", new SetStubSummary { Code = "ice" })
+        @Component.Invoke("SetSummary", new SetStubSummary { Code = "4ed" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "fem" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "drk" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "leg" })
+        @Component.Invoke("SetSummary", new SetStubSummary { Code = "3ed" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "atq" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "arn" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "2ed" })
