Save Draw Support - integrated with Azure Tables for saving draw data - added button to generated tabs to Save Draw - added controller method to save the draw and ties it to a userDrawId cookie - UI displays URL to saved draw - returning to a saved draw URL reloads and displays the draw - now uses mtgenId as a unique identifier for all cards - importer updated to have mtgenId support - upgraded some packages

--- a/src/mtgen/Views/Shared/_Layout.cshtml
+++ b/src/mtgen/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Linq;
-@using mtgen.ViewModels;
+@using mtgen.Services;
 @{
     var set = (mtgen.ViewModels.Set)ViewBag.Set;
 }
@@ -122,6 +122,9 @@
             var currOption = "#product-content>section.active .options a.active";
             mtgGen.on('cardSetsGenerated', function (setCode) {
                 ga('send', 'event', setCode.toUpperCase(), 'Generate', setCode.toUpperCase() + ": generate: " + $(currProduct).text() + ", " + $(currOption).text());
+            });
+            mtgGen.on('drawSaved', function (setCode) {
+                ga('send', 'event', setCode.toUpperCase(), 'SaveDraw', setCode.toUpperCase() + ": save-draw: " + $(currProduct).text());
             });
             $('.export-download').on('click', function (setCode) {
                 ga('send', 'event', setCode.toUpperCase(), 'Export', setCode.toUpperCase() + ": export: " + $(currProduct).text() + ", " + $(currOption).text());
