--- a/src/mtgen/Views/Shared/_LayoutAdmin.cshtml
+++ b/src/mtgen/Views/Shared/_LayoutAdmin.cshtml
@@ -1,13 +1,9 @@
-﻿
-THIS WAS THE ORIGINAL LAYOUT.
-I'm just leaving it here in case I need to look at how thing I've deleted were done.
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"] - mtgen</title>
+        <title>@ViewData["Title"] - mtgen.net</title>
 
         <environment names="Development">
             <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -19,8 +15,8 @@ I'm just leaving it here in case I need to look at how thing I've deleted were d
                   asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
             <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
         </environment>
-        <meta name="description" content="The description of my page" />
-</head>
+        @*@Html.ApplicationInsightsJavaScript(TelemetryConfiguration)*@
+    </head>
     <body>
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
@@ -31,7 +27,7 @@ I'm just leaving it here in case I need to look at how thing I've deleted were d
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">mtgen</a>
+                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">testapp</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -47,7 +43,7 @@ I'm just leaving it here in case I need to look at how thing I've deleted were d
             @RenderBody()
             <hr />
             <footer>
-                <p>&copy; 2015 - mtgen</p>
+                <p>&copy; @DateTime.Now.Year - mtgen.net</p>
             </footer>
         </div>
 
