--- a/src/mtgen/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/src/mtgen/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -15,7 +15,6 @@
                   asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
             <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
         </environment>
-        @*@Html.ApplicationInsightsJavaScript(TelemetryConfiguration)*@
     </head>
     <body>
         <div class="navbar navbar-inverse navbar-fixed-top">
@@ -27,7 +26,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">testapp</a>
+                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">mtgen</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
