- added Draw Statistics page, fetching and displaying the top used draws - changed UseCount to reside on the table itself, not within the json data - fixed top menu to be only useful links - fixes SaveDraw to not create a NEW draw every time (oops)

--- a/src/mtgen/Areas/Admin/Views/Home/Index.cshtml
+++ b/src/mtgen/Areas/Admin/Views/Home/Index.cshtml
@@ -2,4 +2,7 @@
     ViewData["Title"] = "Admin Home Page";
 }
 
-<h1>Test Admin page</h1>
+<h1>Welcome, Me!</h1>
+
+<br /><br /><br />
+<a class="btn btn-default" asp-action="Index" asp-controller="Draw" role="button">Draw Statistics</a>
