--- a/src/mtgen/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/src/mtgen/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -34,8 +34,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li><a asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
+                        <li><a asp-controller="Draw" asp-action="Index">Draw Statistics</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a asp-controller="Account" asp-action="Logout">Log out</a></li>
