- added Eldritch Moon (emn) placeholder

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -40,6 +40,7 @@
         </thead>
         <tbody class="block">
             <tr class="title"><td colspan="5">Shadows over Innistrad Block</td></tr>
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "emn", IsFutureSet = true })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "soi", IsFutureSet = true })
         </tbody>
         <tbody>
