- fixed sets prerelease dates (misspelled prerelease!) - added Ice Age block to home page

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -153,8 +153,13 @@
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "uds" })
         </tbody>
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "ugl" })
+        <tbody class="block">
+            <tr class="title"><td colspan="5">Ice Age Block</td></tr>
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "csp" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "all" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "ice" })
+        </tbody>
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "hml" })
-        @Component.Invoke("SetSummary", new SetStubSummary { Code = "ice" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "4ed" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "fem" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "drk" })
