- added Visions set (vis) - added Weatherlight set (wth)

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -155,6 +155,8 @@
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "ugl" })
         <tbody class="block">
             <tr class="title"><td colspan="5">Mirage Block</td></tr>
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "wth" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "vis" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "mir" })
         </tbody>
         <tbody class="block">
