--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -155,6 +155,7 @@
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "ugl" })
         <tbody class="block">
             <tr class="title"><td colspan="5">Tempest Block</td></tr>
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "sth" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "tmp" })
         </tbody>
         <tbody class="block">
