- added Invasion set (inv)

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -141,6 +141,10 @@
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "jud" })
         </tbody>
         <tbody class="block">
+            <tr class="title"><td colspan="5">Invasion Block</td></tr>
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "inv" })
+        </tbody>
+        <tbody class="block">
             <tr class="title"><td colspan="5">Masques Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "mmq" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "nms" })
