- added Planeshift set (pls) - reorganized the older expansion blocks; I accidentally put them in chronological order instead of first-second-third order within their block

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -143,6 +143,7 @@
         <tbody class="block">
             <tr class="title"><td colspan="5">Invasion Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "inv" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "pls" })
         </tbody>
         <tbody class="block">
             <tr class="title"><td colspan="5">Masques Block</td></tr>
@@ -159,21 +160,21 @@
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "ugl" })
         <tbody class="block">
             <tr class="title"><td colspan="5">Tempest Block</td></tr>
-            @Component.Invoke("SetSummary", new SetStubSummary { Code = "exo" })
-            @Component.Invoke("SetSummary", new SetStubSummary { Code = "sth" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "tmp" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "sth" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "exo" })
         </tbody>
         <tbody class="block">
             <tr class="title"><td colspan="5">Mirage Block</td></tr>
-            @Component.Invoke("SetSummary", new SetStubSummary { Code = "wth" })
-            @Component.Invoke("SetSummary", new SetStubSummary { Code = "vis" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "mir" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "vis" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "wth" })
         </tbody>
         <tbody class="block">
             <tr class="title"><td colspan="5">Ice Age Block</td></tr>
-            @Component.Invoke("SetSummary", new SetStubSummary { Code = "csp" })
-            @Component.Invoke("SetSummary", new SetStubSummary { Code = "all" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "ice" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "all" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "csp" })
         </tbody>
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "hml" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "4ed" })
