- added Apocalypse set (apc)

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -144,6 +144,7 @@
             <tr class="title"><td colspan="5">Invasion Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "inv" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "pls" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "apc" })
         </tbody>
         <tbody class="block">
             <tr class="title"><td colspan="5">Masques Block</td></tr>
