- Fifth Edition set (5ed) added

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -165,6 +165,7 @@
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "sth" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "exo" })
         </tbody>
+        @Component.Invoke("SetSummary", new SetStubSummary { Code = "5ed" })
         <tbody class="block">
             <tr class="title"><td colspan="5">Mirage Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "mir" })
