- added  Classic Sixth Edition set (6ed)

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -152,6 +152,7 @@
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "nms" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "pcy" })
         </tbody>
+        @Component.Invoke("SetSummary", new SetStubSummary { Code = "6ed" })
         <tbody class="block">
             <tr class="title"><td colspan="5">Urza Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "usg" })
