- added Ninth Edition Core Set (9ed)

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -126,6 +126,7 @@
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "wwk" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "roe" })
         </tbody>
+        @Component.Invoke("SetSummary", new SetStubSummary { Code = "9ed" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "unh" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "8ed" })
         <tbody class="block">
