- added Magic 2011 Core Set (m11)

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -120,6 +120,7 @@
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "mbs" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "nph" })
         </tbody>
+        @Component.Invoke("SetSummary", new SetStubSummary { Code = "m11" })
         <tbody class="block">
             <tr class="title"><td colspan="5">Zendikar </td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "zen" })
