- Magic 2012 Core Set (m12) added

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -114,6 +114,7 @@
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "dka" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "isd" })
         </tbody>
+        @Component.Invoke("SetSummary", new SetStubSummary { Code = "m12" })
         <tbody class="block">
             <tr class="title"><td colspan="5">Scars of Mirrodin Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "som" })
