- added Mirrodin set (mrd)

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -133,6 +133,10 @@
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "10e" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "9ed" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "unh" })
+        <tbody class="block">
+            <tr class="title"><td colspan="5">Mirrodin Block</td></tr>
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "mrd" })
+        </tbody>
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "8ed" })
         <tbody class="block">
             <tr class="title"><td colspan="5">Onslaught Block</td></tr>
