- added Darksteel (dst) set

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -136,6 +136,7 @@
         <tbody class="block">
             <tr class="title"><td colspan="5">Mirrodin Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "mrd" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "dst" })
         </tbody>
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "8ed" })
         <tbody class="block">
