--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -137,6 +137,7 @@
             <tr class="title"><td colspan="5">Mirrodin Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "mrd" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "dst" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "5dn" })
         </tbody>
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "8ed" })
         <tbody class="block">
