--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -132,6 +132,10 @@
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "m10" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "10e" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "9ed" })
+        <tbody class="block">
+            <tr class="title"><td colspan="5">Kamigawa Block</td></tr>
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "chk" })
+        </tbody>
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "unh" })
         <tbody class="block">
             <tr class="title"><td colspan="5">Mirrodin Block</td></tr>
