--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -135,6 +135,7 @@
         <tbody class="block">
             <tr class="title"><td colspan="5">Kamigawa Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "chk" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "bok" })
         </tbody>
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "unh" })
         <tbody class="block">
