--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -136,6 +136,7 @@
             <tr class="title"><td colspan="5">Kamigawa Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "chk" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "bok" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "sok" })
         </tbody>
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "unh" })
         <tbody class="block">
