- added Ravnica (rav) set

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -131,6 +131,10 @@
         </tbody>
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "m10" })
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "10e" })
+        <tbody class="block">
+            <tr class="title"><td colspan="5">Kamigawa Block</td></tr>
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "rav" })
+        </tbody>
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "9ed" })
         <tbody class="block">
             <tr class="title"><td colspan="5">Kamigawa Block</td></tr>
