--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -134,6 +134,7 @@
         <tbody class="block">
             <tr class="title"><td colspan="5">Kamigawa Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "rav" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "gpt" })
         </tbody>
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "9ed" })
         <tbody class="block">
