--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -135,6 +135,7 @@
             <tr class="title"><td colspan="5">Kamigawa Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "rav" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "gpt" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "dis" })
         </tbody>
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "9ed" })
         <tbody class="block">
