- added Time Spiral (tsp) and Planar Chaos (plc) sets

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -130,9 +130,14 @@
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "roe" })
         </tbody>
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "m10" })
+        <tbody class="block">
+            <tr class="title"><td colspan="5">Time Spiral Block</td></tr>
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "tsp" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "plc" })
+        </tbody>
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "10e" })
         <tbody class="block">
-            <tr class="title"><td colspan="5">Kamigawa Block</td></tr>
+            <tr class="title"><td colspan="5">Ravnica Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "rav" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "gpt" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "dis" })
