- added Future Sight (fut) set

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -134,6 +134,7 @@
             <tr class="title"><td colspan="5">Time Spiral Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "tsp" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "plc" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "fut" })
         </tbody>
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "10e" })
         <tbody class="block">
