--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -134,6 +134,7 @@
         <tbody class="block">
             <tr class="title"><td colspan="5">Lorwyn Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "lrw" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "mor" })
         </tbody>
         <tbody class="block">
             <tr class="title"><td colspan="5">Time Spiral Block</td></tr>
