--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -132,6 +132,10 @@
         </tbody>
         @Component.Invoke("SetSummary", new SetStubSummary { Code = "m10" })
         <tbody class="block">
+            <tr class="title"><td colspan="5">Shadowmoor Block</td></tr>
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "shm" })
+        </tbody>
+        <tbody class="block">
             <tr class="title"><td colspan="5">Lorwyn Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "lrw" })
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "mor" })
