--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -134,6 +134,7 @@
         <tbody class="block">
             <tr class="title"><td colspan="5">Alara Block</td></tr>
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "ala" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "con_" })
         </tbody>
         <tbody class="block">
             <tr class="title"><td colspan="5">Shadowmoor Block</td></tr>
