- oops.. didn't put in the right set code for arb

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -136,7 +136,7 @@
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "ala" })
             @* This one is weird becuase "con" is a reserved word in VS *@
             @Component.Invoke("SetSummary", new SetStubSummary { Code = "con_" })
-            @Component.Invoke("SetSummary", new SetStubSummary { Code = "con_" })
+            @Component.Invoke("SetSummary", new SetStubSummary { Code = "arb" })
         </tbody>
         <tbody class="block">
             <tr class="title"><td colspan="5">Shadowmoor Block</td></tr>
