--- a/src/mtgen/Views/Set/con_.cshtml
+++ b/src/mtgen/Views/Set/con_.cshtml
@@ -17,9 +17,12 @@
         //}
     };
 
-    set.CardFiles = new List<string>() { "cardsMain.json", "cardsOther.json", "cardsToken.json",
-        "../ala/cardsMain.json", "../ala/cardsToken.json" };
-    set.PackFiles = new List<string>() { "packs.json" };
+    set.CardFiles = new List<string>() {
+        "cardsMain.json", "cardsOther.json", "cardsToken.json",
+        "../ala/cardsMain.json", "../ala/cardsOther.json", "../ala/cardsToken.json",
+        "../arb/cardsMain.json", "../arb/cardsOther.json", "../arb/cardsToken.json"
+    };
+    set.PackFiles = new List<string>() { "packs.json", "../ala/packs.json", "../arb/packs.json" };
 
     ViewBag.Set = set;
 
